# Dashboard_Data_Supermarket

./: .gitignore  .pre-commit-config.yaml  README.md  README_RUFF.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml
src/: __init__.py
src/app/: __init__.py  analysis.py  analysis_simple.py  dashboard.py  utils.py
src/assets/: __init__.py  colors.py  custom.css  custom_toggles.css  filters_flexbox.css  readme_assets.md  style.css
src/notebooks/: readme_donnees.md
tests/: __init__.py  test_analysis.py  test_dashboard.py  test_example.py  test_init.py  test_utils.py
