[metadata]
name = dashboard-data-supermarket
version = 0.1.0
description = Dashboard for supermarket data analysis
author = RoiBrioche
author_email = your.email@example.com

[options]
packages = find:
python_requires = >=3.11
install_requires =
    pandas>=1.5.0
    numpy>=1.21.0
    matplotlib>=3.5.0
    seaborn>=0.11.0
    plotly>=5.0.0
    dash>=2.0.0
    dash-bootstrap-components>=1.0.0
    dash-ag-grid>=2.0.0
    scikit-learn>=1.0.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    ruff>=0.1.0
    mypy>=0.991
    bandit>=1.7.0
    pip-audit>=2.0.0
    pre-commit>=2.20.0

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    --verbose
    --cov=src
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml

[coverage:run]
source = src
omit =
    */tests/*
    */test_*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
